#/********************************************************************************************************************** 
# * THE OMEGA LIB PROJECT
# *---------------------------------------------------------------------------------------------------------------------
# * Copyright 2010								Electronic Visualization Laboratory, University of Illinois at Chicago
# * Authors:										
# *  [Author]									[Mail]
# *---------------------------------------------------------------------------------------------------------------------
# * [LICENSE NOTE]
# *---------------------------------------------------------------------------------------------------------------------
# * [SUMMARY OF FILE CONTENTS]
# *********************************************************************************************************************/

#######################################################################################################################
# Directories needed for compilation
INCLUDE_DIRECTORIES(
  ${OmegaLib_SOURCE_DIR}/include/
)

LINK_DIRECTORIES(
  ${OmegaLib_BINARY_DIR}/omega
)

#######################################################################################################################
# Compile definitions
ADD_DEFINITIONS( )

#######################################################################################################################
# Source files
SET( srcs 
        otest.c
        )
    
#######################################################################################################################
# Headers
SET( headers 
        ) 
        
#######################################################################################################################
# Setup compile info
ADD_EXECUTABLE( otest ${srcs} ${headers})

#######################################################################################################################
# Setup link info.
TARGET_LINK_LIBRARIES( otest
    omega
)


